--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,7 +8,75 @@
     <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 <body>
-    <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
-     <h1>Belajar Devops</h1>
+    <header>
+        <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
+        <h1>Belajar DevOps</h1>
+        <nav>
+            <a href="#beranda">Beranda</a>
+            <a href="#materi">Materi</a>
+            <a href="#jadwal">Jadwal</a>
+            <a href="#kontak">Kontak</a>
+        </nav>
+    </header>
+
+    <main>
+        <section id="beranda">
+            <h2>Selamat Datang</h2>
+            <p>Website ini dibuat untuk mendukung pelatihan DevOps. 
+               Di sini Anda dapat menemukan materi, jadwal, dan informasi penting lainnya.</p>
+        </section>
+
+        <section id="materi">
+            <h2>Materi Pelatihan</h2>
+            <ul>
+                <li>Pengenalan DevOps</li>
+                <li>Continuous Integration (CI)</li>
+                <li>Continuous Deployment (CD)</li>
+                <li>Container & Docker</li>
+                <li>Kubernetes Dasar</li>
+                <li>Monitoring & Logging</li>
+            </ul>
+        </section>
+
+        <section id="jadwal">
+            <h2>Jadwal</h2>
+            <table border="1" cellpadding="8" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Hari</th>
+                        <th>Materi</th>
+                        <th>Waktu</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Senin</td>
+                        <td>Pengenalan DevOps</td>
+                        <td>09.00 - 11.00</td>
+                    </tr>
+                    <tr>
+                        <td>Selasa</td>
+                        <td>Continuous Integration</td>
+                        <td>09.00 - 11.00</td>
+                    </tr>
+                    <tr>
+                        <td>Rabu</td>
+                        <td>Docker & Container</td>
+                        <td>09.00 - 11.00</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section id="kontak">
+            <h2>Kontak</h2>
+            <p>Email: training@devops.com</p>
+            <p>Telepon: 0812-3456-7890</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Training DevOps - All Rights Reserved</p>
+    </footer>
 </body>
 </html>
