--- a/app/public/index.html
+++ b/app/public/index.html
@@ -94,7 +94,7 @@
   <header>
     <div class="header-container">
       <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
-      <h1>Belajar DevOps</h1>
+      <h1>Belajar DevOps Bersama-sama</h1>
     </div>
     <nav>
       <ul>
